# oral-x

./: LICENSE  README.md  inference.py  prepare_dataset.py  pyproject.toml  setup.py  train.py
src/mil/: __init__.py  config.py  dataset.py  doc2txt.py  inference.py  inference_moe.py  model.py  moe_model.py  offline_feature_prepare.py  train.py  train_moe.py  train_single.py  train_single_label.py  utils.py  wsi_processor.py  wsi_processor_fast.py
src/mil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
