[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mil"
version = "0.1.0"
description = "Multimodal Instance Learning for WSI and Text"
authors = [
    {name = "frozenleaves", email = "914814442@qq.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "pandas",
    "scikit-learn",
    "transformers==4.57.1",
    "tqdm",
    "Pillow",
    "openslide-python",
    "timm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]

